cmake_minimum_required(VERSION 3.10)
project(ProjectEuler)

set(CMAKE_CXX_STANDARD 14)

# add_executable(problem007 problems/problem007.cpp)
# add_executable(problem008 problems/problem008.cpp)
# add_executable(problem009 problems/problem009.cpp)
# add_executable(problem010 problems/problem010.cpp)
# add_executable(problem011 problems/problem011.cpp)
# add_executable(problem012 problems/problem012.cpp)
# add_executable(problem013 problems/problem013.cpp)
# add_executable(problem014 problems/problem014.cpp)
# add_executable(problem015 problems/problem015.cpp)
add_executable(problem016 problems/problem016.cpp)
