cmake_minimum_required(VERSION 3.10)
project(ProjectEuler)

set(CMAKE_CXX_STANDARD 14)

# add_executable(problem007 problems/problem007.cpp)
# add_executable(problem008 problems/problem008.cpp)
# add_executable(problem009 problems/problem009.cpp)
# add_executable(problem010 problems/problem010.cpp)
# add_executable(problem011 problems/problem011.cpp)
# add_executable(problem012 problems/problem012.cpp)
# add_executable(problem013 problems/problem013.cpp)
# add_executable(problem014 problems/problem014.cpp)
# add_executable(problem015 problems/problem015.cpp)
# add_executable(problem016 problems/problem016.cpp)
# add_executable(problem017 problems/problem017.cpp)
# add_executable(problem018 problems/problem018.cpp)
# add_executable(problem019 problems/problem019.cpp)
# add_executable(problem020 problems/problem020.cpp problems/number.h)
# add_executable(problem021 problems/problem021.cpp)
# add_executable(problem022 problems/problem022.cpp)
# add_executable(problem023 problems/problem023.cpp)
# add_executable(problem024 problems/problem024.cpp)
# add_executable(problem025 problems/problem025.cpp)
# add_executable(problem026 problems/problem026.cpp)
# add_executable(problem027 problems/problem027.cpp)
# add_executable(problem028 problems/problem028.cpp)
# add_executable(problem029 problems/problem029.cpp)
# add_executable(problem030 problems/problem030.cpp)
# add_executable(problem031 problems/problem031.cpp)
# add_executable(problem032 problems/problem032.cpp)
# add_executable(problem033 problems/problem033.cpp)
# add_executable(problem034 problems/problem034.cpp)
# add_executable(problem035 problems/problem035.cpp)
# add_executable(problem036 problems/problem036.cpp)
# add_executable(problem037 problems/problem037.cpp)
# add_executable(problem038 problems/problem038.cpp)
# add_executable(problem039 problems/problem039.cpp)
# add_executable(problem040 problems/problem040.cpp)
# add_executable(problem041 problems/problem041.cpp)
# add_executable(problem042 problems/problem042.cpp)
# add_executable(problem043 problems/problem043.cpp)
# add_executable(problem044 problems/problem044.cpp)
# add_executable(problem045 problems/problem045.cpp)
# add_executable(problem046 problems/problem046.cpp)
add_executable(problem047 problems/problem047.cpp)
